# spa-booking

./: .gitignore  index.html  package.json
backend/: .gitignore  Makefile  conventions.py  pyproject.toml
backend/app/: config.py  main.py  seed_data.py
backend/app/core/: security.py
backend/app/lib/: payment_utils.py
backend/app/models/: booking.py  service.py  user.py
backend/app/routers/: auth.py  bookings.py  payment.py  services.py  users.py
backend/app/schemas/: auth.py  booking.py  booking_list.py  payment.py  role.py  services_response.py  user.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: api.ts  auth.ts  bookings.ts  payment.ts  user.ts
frontend/src/components/: ProtectedRoute.tsx
frontend/src/components/booking/: Booking.module.css  Booking.tsx
frontend/src/components/booking-form/: BookingForm.module.css  BookingForm.tsx
frontend/src/components/booking-summary/: BookingSummary.module.css  BookingSummary.tsx
frontend/src/components/bookingSummary/: BookingSummary.module.css  BookingSummary.tsx
frontend/src/components/card/: SpaCard.module.css  SpaCard.tsx
frontend/src/components/cardList/: SpaCardList.module.css  SpaCardList.tsx
frontend/src/components/input/: Input.module.css  Input.tsx
frontend/src/hooks/: useAlert.tsx  usePaymentMethod.tsx
frontend/src/lib/: capitalize.ts
frontend/src/pages/: HomePage.tsx
frontend/src/routes/: router.tsx
frontend/src/services/: api.ts
frontend/src/types/: types.ts
(+21 files in other folders)
